# arve

./: .gitignore  .readthedocs.yaml  C00_setup.py  C10_rv_short.py  F00_paths.py  F02_gls.py  F03_psd.py  F04_gls_invert.py  LICENSE  P00_setup.py  README.md  example_sun.py  pyproject.toml  requirements.txt  setup.py  sun_data.txt  sun_example.py
.github/workflows/: lint.yml  lint_format_type.yml  test.yml  test.yml:Zone.Identifier
arve/: __init__.py  arve.py  arve_structure.py  data.py  functions.py  planets.py  star.py
arve/aux_data/masks/: A0_3500-7000.csv  A0_3500-7000.mask  A2_3500-7000.csv  A2_3500-7000.mask  A5_3500-7000.csv  A5_3500-7000.mask  A7_3500-7000.csv  A7_3500-7000.mask  F0_3500-7000.csv  F0_3500-7000.mask  F2_3500-7000.csv  F2_3500-7000.mask  F5_3500-7000.csv  F5_3500-7000.mask  F8_3500-7000.csv  F8_3500-7000.mask  G0_3500-7000.csv  G0_3500-7000.mask  G2_3500-7000.mask  G5_3500-7000.csv  G8_3500-7000.csv  G8_3500-7000.mask  K0_3500-7000.csv  K0_3500-7000.mask  K2_3500-7000.csv  K2_3500-7000.mask  K5_3500-7000.mask  K7_3500-7000.csv  M0_3500-7000.csv  M0_3500-7000.mask  M2_3500-7000.csv  M2_3500-7000.mask  M5_3500-7000.csv  M5_3500-7000.mask
arve/data/: __init__.py  add_data.py  add_rv.py  add_spec.py  add_spectrum.py  add_vrad.py  base_data.py  compute_spec_mast.py  compute_spec_reference.py  compute_vrad.py  compute_vrad_ccf.py  compute_vrad_lbl.py  compute_vrad_pbp.py  data.py  get_aux_data.py  plot_spec_data.py  plot_vrad.py  read_spec.py
arve/functions/: __init__.py  convert_air_to_vac.py  convert_vac_to_air.py  doppler_shift.py  functions.py  gls_periodogram.py  inverted_gaussian.py  keplerian.py  sptype_to_num.py
arve/planets/: __init__.py  add_planet.py  detection_test.py  fit_keplerians.py  injection_recovery.py  planets.py  plot_detections.py  plot_keplerians.py  plot_recoveries.py  recovery_test.py
arve/star/: __init__.py  add_vpsd_component.py  add_vpsd_components.py  compute_vpsd.py  fit_vpsd_coefficients.py  get_stellar_parameters.py  plot_vpsd_components.py  simulate_vrad_from_vpsd_components.py  star.py
docs/: arve.aux_data.masks.rst  arve.aux_data.rst  arve.aux_data.spectra.rst  arve.aux_data.tellurics.rst  arve.aux_data.wavelengths.rst  arve.data.rst  arve.functions.rst  arve.planets.rst  arve.rst  arve.star.rst  citation.rst  conf.py  index.rst  index_api.rst  index_installation.rst  requirements.txt  tutorials.rst
docs/_static/css/: custom.css
docs/source/: arve.functions.rst  conf.py  index.rst  modules.rst
docs/tutorials/: tutorial_0.ipynb  tutorial_1.ipynb  tutorial_2.ipynb  tutorial_2.py  tutorial_3.ipynb  tutorial_3.py  tutorial_4.ipynb
docs/tutorials/example_data/tutorial_1/: example.arve
docs/tutorials/example_data/tutorial_2/: spec_00.npz  spec_01.npz  spec_02.npz  spec_03.npz  spec_04.npz  spec_05.npz  spec_06.npz  spec_07.npz  spec_08.npz  spec_09.npz  spec_10.npz  spec_11.npz  spec_12.npz  spec_13.npz  spec_14.npz  spec_15.npz  spec_16.npz  spec_17.npz  spec_18.npz  spec_19.npz  spec_20.npz  spec_21.npz  spec_22.npz  spec_23.npz  spec_24.npz  spec_25.npz  spec_26.npz  spec_27.npz  spec_28.npz  spec_29.npz  spec_30.npz  spec_31.npz  spec_32.npz  spec_33.npz  spec_34.npz  spec_35.npz  spec_36.npz  spec_37.npz  spec_38.npz  spec_39.npz  (+61 more)
docs/tutorials/example_data/tutorial_3/: vrad.csv
html/arve/: arve_structure.html  index.html
html/arve/data/: add_rv.html  add_spectrum.html  index.html
html/arve/planets/: add_planet.html  index.html
html/arve/star/: add_vpsd_component.html  compute_vpsd.html  fit_vpsd_coefficients.html  index.html  plot_vpsd_components.html
tests/: test_arve.py
