[project]
name = "arve"
authors = [
    {name = "Khaled Al Moulla", email = "almoulla@noreply.github.com"},
]
maintainers = [
    {name = "Khaled Al Moulla", email = "almoulla@noreply.github.com"},
]
version = "0.1.3"
requires-python = ">=3.11"
description = "Package for spectroscopy of stars and analyzing radial velocity elements for exoplanet identification"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astroquery",
    "lmfit",
    "numba",
    "scipy",
    "numpy",
    "matplotlib",
    "pandas",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-github-actions-annotate-failures",
]
lint = [
    "mypy",
    "mypy-extensions",
    "black",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["dist", "build", "dev", "typings"]
addopts = ["--cov=./"]

[tool.coverage.run]
source = ["./*"]
omit = ["dev/*", "tests/*", "*types.py", "*/__init__.py"]

[tool.mypy]
strict = "true"

[tool.ruff]
extend-select = ["ALL"]
ignore = ["COM", "S101"]
src = ["./arve"]